--- a/styles/components/Shadings/Shadings.scss
+++ b/styles/components/Shadings/Shadings.scss
@@ -1,4 +1,5 @@
-@import "../../sass/variables/Shadings.variables";
+//@import "../../sass/variables/Shadings.variables";
+@import "../../sass/_variables-import";
 
 p.qc-sd-elevation-0 {
     @extend %qc-p0-shading;
