--- a/styles/sass/_variables-import.scss
+++ b/styles/sass/_variables-import.scss
@@ -1,4 +1,5 @@
 @import "./variables/colors.variables.scss";
 @import "./variables/typography.variables.scss";
 @import "./variables/spacing.variables.scss";
-
+@import "./variables/shadings.variables.scss";
+@import "./variables/12col-grid.variables.scss";
