--- a/styles/sass/qc-sdg.scss
+++ b/styles/sass/qc-sdg.scss
@@ -1,2 +1,4 @@
-//@import './_variables-import';
 @import "../components/fonts/fonts.scss";
+@import "../components/lists/lists.scss";
+@import "../components/shadings/shadings.scss";
+@import "../components/blockquote/blockquote.scss";
