--- a/styles/components/blockquote/blockquote.scss
+++ b/styles/components/blockquote/blockquote.scss
@@ -6,16 +6,16 @@
 // petit
 .qc-blockquote {
     display: block;
-    margin: $spacing-8 $spacing-0;
+    margin: $qc-spacing-8 $qc-spacing-0;
     text-align: left;
-    padding: $spacing-0 $spacing-6;
+    padding: $qc-spacing-0 $qc-spacing-6;
     border-width: 0;
 
     .qc-blockquote-quote {
         font-family: $qc-font-open-sans;
         display: block;
         position: relative;
-        margin-bottom: $spacing-4;
+        margin-bottom: $qc-spacing-4;
         color: $qc-color-dark-blue;
         font-size: 18px;
         line-height: 24px;
@@ -26,16 +26,16 @@
 // grand
 .qc-blockquote-grand {
     display: block;
-    margin: $spacing-8 $spacing-0;
+    margin: $qc-spacing-8 $qc-spacing-0;
     text-align: left;
-    padding: $spacing-0 $spacing-6;
+    padding: $qc-spacing-0 $qc-spacing-6;
     border-width: 0;
 
     .qc-blockquote-quote-grand {
         font-family: $qc-font-open-sans;
         display: block;
         position: relative;
-        margin-bottom: $spacing-4;
+        margin-bottom: $qc-spacing-4;
         color: $qc-color-dark-blue;
         font-size: 31px;
         line-height: 40px;
@@ -46,7 +46,7 @@
 
 
 .qc-blockquote-grand p{
-    margin: 0 0 $spacing-5 0;
+    margin: 0 0 $qc-spacing-5 0;
     &::before {
         content: open-quote;
     }
@@ -57,7 +57,7 @@
 }
 
 .qc-blockquote p {
-    margin: 0 0 $spacing-5 0;
+    margin: 0 0 $qc-spacing-5 0;
 
     &::before {
         content: open-quote;
@@ -75,7 +75,7 @@ html[lang="fr"] blockquote {
 .qc-blockquote-author-name {
     display: block;
         position: relative;
-        margin-bottom: $spacing-0;
+        margin-bottom: $qc-spacing-0;
         font-size: 16px;
         line-height: 24px;
         font-weight: 600;
@@ -96,7 +96,7 @@ html[lang="fr"] blockquote {
 
 .qc-blockquote-author-title {
     display: block;
-    margin: $spacing-0;
+    margin: $qc-spacing-0;
     font-size: 14px;
     line-height: 20px;
     font-weight: 400;
