--- a/styles/sass/tools/common.mixins.scss
+++ b/styles/sass/tools/common.mixins.scss
@@ -1,11 +1,12 @@
-@import "../../sass/variables/colors.variables";
-@import "../../sass/variables/typography.variables";
+//@import "../../sass/variables/colors.variables";
+//@import "../../sass/variables/typography.variables";
+@import "../../sass/_variables-import";
 
 @mixin qc-lists() {
         font-family: $qc-font-open-sans;
         font-size: 1rem;
         list-style: disc;
-        padding: 0 0 0.8rem 3.2rem;
+        //padding: 0 0 0.8rem 3.2rem;
         padding: 0 0 0.8rem 1.9rem;
     li {
         padding: 0 0 1.6rem 0;
