travail sur les design tokens

--- a/styles/sass/variables/Breakpoints.variables.scss
+++ b/styles/sass/variables/Breakpoints.variables.scss
@@ -1,6 +1,5 @@
-$xs: 0;
-$sm: 36rem;
-$md: 48rem;
-$lg: 62rem;
-$xl: 75rem;
-$xxl: 87.5rem;
+$qc-sm: 36rem;
+$qc-md: 48rem;
+$qc-lg: 62rem;
+
+$qc-grid-breakpoints: (xs: 0,sm: $qc-sm,md: $qc-md,lg: $qc-lg);
