--- a/styles/sass/variables/colors.variables.scss
+++ b/styles/sass/variables/colors.variables.scss
@@ -3,7 +3,7 @@
 //---------------
 
 // Main colors
-$qc-color-blue_piv: #095797;
+$qc-color-blue-piv: #095797;
 
 //Accent colors
 $qc-color-pink: #f09686;
