--- a/styles/sass/variables/global.variables.scss
+++ b/styles/sass/variables/global.variables.scss
@@ -14,5 +14,5 @@ $standard-width: 48rem;
 $full-width: 100%;
 
 // Height values
-$standard-input-height: 48px;
-$ontario-logo-height: 46px;
+$standard-input-height: 3 * $base-spacing;
+
