--- a/styles/sass/variables/spacing.variables.scss
+++ b/styles/sass/variables/spacing.variables.scss
@@ -1,20 +1,13 @@
-$qc-spacing-0: 0;
-$qc-spacing-1: 0.25rem;
-$qc-spacing-2: 0.5rem;
-$qc-spacing-3: 0.75rem;
-$qc-spacing-3-1: 0.875rem;
-$qc-spacing-4: 1rem;
-$qc-spacing-5: 1.5rem;
-$qc-spacing-6: 2rem;
-$qc-spacing-7: 2.5rem;
-$qc-spacing-8: 3rem;
-$qc-spacing-8-1: 3.375rem;
-$qc-spacing-9: 4rem;
-$qc-spacing-10: 4.5rem;
-$qc-spacing-11: 5rem;
-$qc-spacing-12: 5.5rem;
-$qc-spacing-13: 5.5rem;
-$qc-spacing-14: 5.5rem;
-$qc-spacing-15: 6rem;
-$qc-spacing-16: 6.25rem;
-$qc-spacing-16: 7rem;
+$base-spacing: 1.6rem;
+$qc-spacing-1: .25 * $base-spacing;
+$qc-spacing-2: .5 * $base-spacing;
+$qc-spacing-3: .975 * $base-spacing; // 1.4rem / 14px
+$qc-spacing-4: $base-spacing;
+$qc-spacing-5: 1.5 * $base-spacing;
+$qc-spacing-6: 2 * $base-spacing;
+$qc-spacing-7: 2.5 * $base-spacing;
+$qc-spacing-8: 3 * $base-spacing;
+$qc-spacing-9: 3.5 * $base-spacing;
+$qc-spacing-10: 4 * $base-spacing;
+$qc-spacing-11: 4.5 * $base-spacing;
+$qc-spacing-12: 5 * $base-spacing;
