--- a/styles/sass/qc-sdg.scss
+++ b/styles/sass/qc-sdg.scss
@@ -2,3 +2,4 @@
 @import "../components/lists/lists";
 @import "../components/12col-grid/12col-grid";
 @import "../components/shadings/shadings";
+@import "../components/blockquote/blockquote";
