--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -11,22 +11,53 @@
   }
 }
 
-h1{
-  @include content-header-size(49);
-  font-weight:bold;
-  margin-top: $spacer-48;
-  margin-bottom: $spacer-16;
+h1, .qc-h1 {
+  @include header-font(49);
+  margin-top: $spacer-72;
+  margin-bottom: $spacer-32;
   @include media-tablet() {
-    @include content-header-size(36);
-    margin-top:2.4rem !important;
+    @include header-font(36);
   }
 
   &:after{
     content: "";
     display:block;
     margin: 0;
-    width:4.8rem;
-    padding-top: 0.4rem;
+    width:$spacer-48;
+    padding-top: $spacer-4;
     border-bottom: 4px solid $color-pink;
   }
+}
+
+h2, .qc-h2 {
+  @include header-font(35);
+  margin-top: $spacer-48;
+  margin-bottom: $spacer-16;
+  @include media-tablet(){
+    @include header-font(29);
+  }
+}
+h3, .qc-h3 {
+  @include header-font(28);
+  font-weight:bold;
+  margin-top: $spacer-24;
+  margin-bottom: $spacer-16;
+  @include media-tablet(){
+    @include header-font(25);
+  }
+}
+h4, .qc-h4 {
+  @include header-font(28);
+  margin-top: $spacer-24;
+  margin-bottom: $spacer-8;
+}
+h5,.qc-h5 {
+  @include header-font(19);
+  margin-top: $spacer-16;
+  margin-bottom: 0;
+}
+h6,.qc-h6 {
+  @include header-font(16);
+  margin-top: $spacer-16;
+  margin-bottom: 0;
 }
