--- a/scss/qc-sdg.scss
+++ b/scss/qc-sdg.scss
@@ -3,7 +3,7 @@
 
 @use "colors" as *;
 @use "blockquote" as *;
-//@use "figure" as *;
+@use "figure" as *;
 @use "lists" as *;
 @use "fonts" as *;
 @use "shadings" as *;
