--- a/scss/mixins/grid.scss
+++ b/scss/mixins/grid.scss
@@ -1,5 +1,4 @@
-
-// Merci Bootstrap ! / ty BS !
+// Merci ! / ty Bootstrap
 @import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
 $enable-deprecation-messages : false;
