--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,39 +1,5 @@
-@import "variables/colors";
-
-/*Main palette background colours*/
-.qc-bg-blue_piv {
-  background-color: $color-blue_piv;
-}
-.qc-bg-pink {
-  background-color: $color-pink;
-}
-.qc-bg-blue {
-  background-color: $color-blue;
-}
-.qc-bg-light-blue {
-  background-color: $color-light-blue;
-}
-.qc-bg-light-grey {
-  background-color: $color-light-grey;
-}
-.qc-bg-dark-blue {
-  background-color: $color-dark-blue;
-}
-.qc-bg-grey {
-  background-color: $color-grey;
-}
-.qc-bg-red,
-.qc-bg-error {
-  background-color: $color-errors;
-}
-.qc-bg-green,
-.qc-bg-success {
-  background-color: $color-validation;
-}
-@function color-name($color, $variant: "") {
-  $hyphen: if($variant == "", "","-");
-  @return #{$variant}#{$hyphen}#{$color};
-}
+@use "function/colors" as *;
+@import "variables";
 
 :root {
   @each $color,$variants in $colors {
@@ -47,7 +13,7 @@
   @each $variant, $hexa in $variants {
     $color-var-name: #{color-name($color,$variant)};
     .qc-bg-#{$color-var-name} {
-      background-color: var(--qc-#{$color-var-name});
+      background-color: #{color($color,$variant)};
     }
   }
 }
