--- a/scss/variables/colors.scss
+++ b/scss/variables/colors.scss
@@ -33,7 +33,7 @@ $colors: (
     "dark": #223654,
   ),
   "grey" : (
-    "light" : #c5cad2,
+    "light" : #f2f1f1,
     "pale" : #f1f1f2,
     "": #8893a2,
     "medium" : #6b778a,
