Retouche des couleurs

--- a/scss/variables/colors.scss
+++ b/scss/variables/colors.scss
@@ -25,16 +25,16 @@ $color-validation: #4f813d;
 
 $colors: (
   "blue" : (
-    "light" : #dae6f0,
     "pale" : #4a98d9,
+    "light" : #dae6f0,
     "" : #1479cc,
     "piv": #095797,
     "medium" : #19406C,
     "dark": #223654,
   ),
   "grey" : (
-    "light" : #f2f1f1,
     "pale" : #f1f1f2,
+    "light" : #c5cad2,
     "": #8893a2,
     "medium" : #6b778a,
     "dark": #4e5662,
