--- a/scss/variables/colors.scss
+++ b/scss/variables/colors.scss
@@ -25,8 +25,8 @@ $color-validation: #4f813d;
 
 $colors: (
   "blue" : (
-    "pale" : #4a98d9,
-    "light" : #dae6f0,
+    "pale" : #dae6f0,
+    "light" : #4a98d9,
     "" : #1479cc,
     "piv": #095797,
     "medium" : #19406C,
