--- a/scss/variables/typography.scss
+++ b/scss/variables/typography.scss
@@ -9,8 +9,15 @@ $content-font: $font-open-sans;
 $header-font: $font-roboto;
 
 // QC Font Weight
-$font-weigh-bold: bold;
-$font-weigh-normal: normal;
+$font-weight-300: 300;
+$font-weight-lighter: lighter;
+$font-weight-normal: normal;
+$font-weight-500: 500;
+$font-weight-600: 600;
+$font-weight-bold: bold;
+$font-weight-800: 800;
+$font-weight-900: 900;
+$font-weight-bolder: bolder;
 
 // Font sizes and line height associations
 // … for content
@@ -63,11 +70,9 @@ $font-sizes: (
   $fallback: 0;
   @each $level,$line-height in $font-sizes {
     @if $level > $font-size {
-      @debug $level;
       @return $level;
     }
     $fallback: $level;
   }
-  @debug $fallback;
   @return $fallback;
 }
